--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -5,13 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Class and ID Selectors</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylep2.css">
 </head>
 <body>
-  <p>Number 1 - I'm a class!</p>
-  <div>Number 2 - I'm one ID.</div>
-  <p>Number 3 - I'm a class, but cooler!</p>
-  <div>Number 4 - I'm another ID.</div>
-  <p>Number 5 - I'm a class!</p>
+  
+  <div class="number1">
+      <p>Number 1 - I'm a class!</p>
+  </div>
+  
+  <div id="number2">Number 2 - I'm one ID.</div>
+   
+  <div class="number3">
+      <p>Number 3 - I'm a class, but cooler!</p>
+  </div>
+  
+  <div id="number4">Number 4 - I'm another ID.</div>
+  
+  <div class="number5">
+      <p>Number 5 - I'm a class!</p>
+  </div>
+
 </body>
 </html>
